--- a/Scource code/index.html
+++ b/Scource code/index.html
@@ -7,6 +7,18 @@
     <title>Document</title>
 </head>
 <body>
+    <header>
+
+    </header>
+    <section>
+
+    </section>
+    <section>
+
+    </section>
+    <footer>
+        
+    </footer>
     
 </body>
 </html>
